lib2/kestrel-test-suite/testdata/expressions/match/errors/duplicate_binding_name.ks
// test: diagnostics
// stdlib: false

module Main

func test(t: (lang.i64, lang.i64)) -> lang.i64 {
    match t {
        (x, x) => x // ERROR: duplicate
    }
}
